<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditHouseActivity" >

    <TextView
        android:id="@+id/houseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houseNameView" />

    <EditText
        android:id="@+id/houseNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/houseWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houseWifiView" />

    <EditText
        android:id="@+id/houseWifiField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/saveHouseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton" />

</LinearLayout>
