<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditLightSwitchActivity" >

    <TextView
        android:id="@+id/lightSwitchName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lightSwitchNameView" />

    <EditText
        android:id="@+id/lightSwitchNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lightSwitchPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lightSwitchPinView" />

    <EditText
        android:id="@+id/lightSwitchPinField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/saveLightSwitchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton" />

</LinearLayout>
